Implement settings UI

--- a/dbinspector/src/main/res/layout/dbinspector_activity_settings.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_settings.xml
@@ -1,5 +1,6 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -64,70 +65,149 @@
                         android:layout_marginEnd="16dp"
                         android:text="Number of lines used to preview large amount of any data." />
 
-                    <com.google.android.material.checkbox.MaterialCheckBox
-                        android:id="@+id/linesCheckBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/listPreferredItemHeightSmall"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="10dp"
-                        android:enabled="false"
-                        android:text="Limit maximum number of content lines" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="10dp"
+                        android:minHeight="?attr/listPreferredItemHeightSmall"
                         android:orientation="horizontal">
 
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/decreaseLinesButton"
-                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                            android:layout_width="@dimen/dbinspector_slider_button_size"
-                            android:layout_height="@dimen/dbinspector_slider_button_size"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="@dimen/dbinspector_slider_button_margin"
-                            android:layout_marginEnd="@dimen/dbinspector_slider_button_margin"
-                            android:enabled="false"
-                            android:insetLeft="0dp"
-                            android:insetTop="0dp"
-                            android:insetRight="0dp"
-                            android:insetBottom="0dp"
-                            app:cornerRadius="@dimen/dbinspector_slider_button_corner_radius"
-                            app:icon="@drawable/dbinspector_ic_minus"
-                            app:iconGravity="textStart"
-                            app:iconPadding="0dp"
-                            app:strokeWidth="0dp" />
-
-                        <com.google.android.material.slider.Slider
-                            android:id="@+id/linesSlider"
+                        <com.google.android.material.checkbox.MaterialCheckBox
+                            android:id="@+id/linesCheckBox"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             android:enabled="false"
-                            android:stepSize="1"
-                            app:haloRadius="@dimen/dbinspector_slider_halo_radius"
-                            app:thumbRadius="@dimen/dbinspector_slider_thumb_radius" />
+                            android:minHeight="?attr/listPreferredItemHeightSmall"
+                            android:text="Limit maximum number of content lines" />
 
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/increaseLinesButton"
-                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                            android:layout_width="@dimen/dbinspector_slider_button_size"
-                            android:layout_height="@dimen/dbinspector_slider_button_size"
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/linesView"
+                            style="@style/TextAppearance.MaterialComponents.Body1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginStart="@dimen/dbinspector_slider_button_margin"
-                            android:layout_marginEnd="@dimen/dbinspector_slider_button_margin"
-                            android:enabled="false"
-                            android:insetLeft="0dp"
-                            android:insetTop="0dp"
-                            android:insetRight="0dp"
-                            android:insetBottom="0dp"
-                            app:cornerRadius="@dimen/dbinspector_slider_button_corner_radius"
-                            app:icon="@drawable/dbinspector_ic_plus"
-                            app:iconGravity="textStart"
-                            app:iconPadding="0dp"
-                            app:strokeWidth="0dp" />
+                            android:layout_marginStart="8dp"
+                            android:gravity="center_vertical"
+                            android:visibility="invisible"
+                            tools:text="7"
+                            tools:visibility="visible" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linesLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:orientation="horizontal">
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/decreaseLinesButton"
+                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                                android:layout_width="@dimen/dbinspector_slider_button_size"
+                                android:layout_height="@dimen/dbinspector_slider_button_size"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="@dimen/dbinspector_slider_button_margin"
+                                android:layout_marginEnd="@dimen/dbinspector_slider_button_margin"
+                                android:insetLeft="0dp"
+                                android:insetTop="0dp"
+                                android:insetRight="0dp"
+                                android:insetBottom="0dp"
+                                app:cornerRadius="@dimen/dbinspector_slider_button_corner_radius"
+                                app:icon="@drawable/dbinspector_ic_minus"
+                                app:iconGravity="textStart"
+                                app:iconPadding="0dp"
+                                app:strokeWidth="0dp" />
+
+                            <com.google.android.material.slider.Slider
+                                android:id="@+id/linesSlider"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="1"
+                                android:stepSize="1"
+                                app:haloRadius="@dimen/dbinspector_slider_halo_radius"
+                                app:labelBehavior="gone"
+                                app:thumbRadius="@dimen/dbinspector_slider_thumb_radius" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/increaseLinesButton"
+                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                                android:layout_width="@dimen/dbinspector_slider_button_size"
+                                android:layout_height="@dimen/dbinspector_slider_button_size"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="@dimen/dbinspector_slider_button_margin"
+                                android:layout_marginEnd="@dimen/dbinspector_slider_button_margin"
+                                android:insetLeft="0dp"
+                                android:insetTop="0dp"
+                                android:insetRight="0dp"
+                                android:insetBottom="0dp"
+                                app:cornerRadius="@dimen/dbinspector_slider_button_corner_radius"
+                                app:icon="@drawable/dbinspector_ic_plus"
+                                app:iconGravity="textStart"
+                                app:iconPadding="0dp"
+                                app:strokeWidth="0dp" />
+
+                        </LinearLayout>
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/truncateCaptionView"
+                            style="@style/TextAppearance.MaterialComponents.Caption"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:text="Toggle truncating large data preview on specified position." />
+
+                        <com.google.android.material.button.MaterialButtonToggleGroup
+                            android:id="@+id/truncateGroup"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:orientation="horizontal"
+                            android:weightSum="3"
+                            app:selectionRequired="true"
+                            app:singleSelection="true">
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/truncateStart"
+                                style="@style/DbInspector.ToggleButton"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Start" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/truncateMiddle"
+                                style="@style/DbInspector.ToggleButton"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Middle" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/truncateEnd"
+                                style="@style/DbInspector.ToggleButton"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="End" />
+
+                        </com.google.android.material.button.MaterialButtonToggleGroup>
 
                     </LinearLayout>
 
@@ -141,32 +221,39 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                app:contentPadding="16dp">
+                android:layout_marginBottom="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textview.MaterialTextView
                         style="@style/TextAppearance.MaterialComponents.Subtitle1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
                         android:text="Blob preview" />
 
                     <com.google.android.material.textview.MaterialTextView
                         style="@style/TextAppearance.MaterialComponents.Caption"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
                         android:text="Preferred preview format for blob type data." />
 
                     <RadioGroup
                         android:id="@+id/blobPreviewGroup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="16dp"
+                        android:layout_marginEnd="10dp"
                         android:orientation="vertical">
 
                         <com.google.android.material.radiobutton.MaterialRadioButton
