--- a/dbinspector/src/main/res/menu/dbinspector_trigger.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_trigger.xml
@@ -9,4 +9,10 @@
         android:title="@string/dbinspector_action_drop"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/edit"
+        android:icon="@drawable/dbinspector_ic_edit"
+        android:title="@string/dbinspector_action_edit"
+        app:showAsAction="always" />
+
 </menu>
