--- a/dbinspector/src/main/res/menu/dbinspector_table.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_table.xml
@@ -15,4 +15,10 @@
         android:title="@string/dbinspector_pragma"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/edit"
+        android:icon="@drawable/dbinspector_ic_edit"
+        android:title="@string/dbinspector_action_edit"
+        app:showAsAction="always" />
+
 </menu>
