--- a/dbinspector/src/main/res/values-night/colors.xml
+++ b/dbinspector/src/main/res/values-night/colors.xml
@@ -3,4 +3,6 @@
     <color name="dbinspector_header_background">#2a2a2a</color>
     <color name="dbinspector_alternate_row_background">#353535</color>
     <color name="dbinspector_status_bar">@android:color/transparent</color>
+    <color name="dbinspector_splitter_background">#303030</color>
+
 </resources>
