--- a/dbinspector/src/main/res/values/dimens.xml
+++ b/dbinspector/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
 
     <dimen name="dbinspector_toggle_button_size">40dp</dimen>
     <dimen name="dbinspector_toggle_button_corner_radius">18dp</dimen>
+
+    <dimen name="dbinspector_default_splitter_size">8dp</dimen>
 </resources>
