--- a/dbinspector/src/main/res/values/dimens.xml
+++ b/dbinspector/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
 
     <dimen name="dbinspector_default_splitter_size">16dp</dimen>
     <dimen name="dbinspector_default_linecount_padding">8dp</dimen>
+    <dimen name="dbinspector_default_linecount_border">2dp</dimen>
 </resources>
