--- a/dbinspector/src/main/res/drawable/dbinspector_keyword_sql_background.xml
+++ b/dbinspector/src/main/res/drawable/dbinspector_keyword_sql_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="16dp" />
+    <corners android:radius="@dimen/dbinspector_keyword_corner" />
 
     <solid android:color="@color/dbinspector_color_keyword_sql" />
 
