--- a/dbinspector/src/main/res/layout/dbinspector_item_keyword.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_keyword.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/keywordView"
         style="@style/TextAppearance.MaterialComponents.Caption"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="1dp"
-        android:background="@drawable/dbinspector_keyword_sql_background"
         android:ellipsize="marquee"
         android:gravity="center"
-        android:minWidth="48dp"
-        android:minHeight="32dp"
+        android:minWidth="40dp"
+        android:minHeight="28dp"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:textColor="@android:color/white" />
+        android:paddingEnd="8dp" />
 
 </FrameLayout>
