--- a/dbinspector/src/main/res/values-night/colors.xml
+++ b/dbinspector/src/main/res/values-night/colors.xml
@@ -4,5 +4,5 @@
     <color name="dbinspector_alternate_row_background">#353535</color>
     <color name="dbinspector_status_bar">@android:color/transparent</color>
     <color name="dbinspector_splitter_background">#303030</color>
-
+    <color name="dbinspector_color_keyword_background">#323232</color>
 </resources>
