--- a/dbinspector/src/main/res/values/colors.xml
+++ b/dbinspector/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="dbinspector_splitter_dragging_background">#35000000</color>
     <color name="dbinspector_color_keyword_sql">#008ac0</color>
     <color name="dbinspector_color_keyword_name">#7b71c2</color>
+    <color name="dbinspector_color_keyword_background">#aaaaaa</color>
 </resources>
