--- a/dbinspector/src/main/res/values/dimens.xml
+++ b/dbinspector/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <dimen name="dbinspector_default_splitter_size">16dp</dimen>
     <dimen name="dbinspector_default_linecount_padding">8dp</dimen>
     <dimen name="dbinspector_default_linecount_border">2dp</dimen>
+
+    <dimen name="dbinspector_keyword_padding">16dp</dimen>
+    <dimen name="dbinspector_keyword_corner">14dp</dimen>
+    <dimen name="dbinspector_keyword_popup_corner">16dp</dimen>
 </resources>
