--- a/dbinspector/src/main/res/layout/dbinspector_activity_edit.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_edit.xml
@@ -91,6 +91,7 @@
                 android:layout_height="?attr/listPreferredItemHeightSmall"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:enabled="false"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
